...
        title="Confidentialité et mentions légales"
        onPress={() => {
          void Linking.openURL(`${API_ORIGIN}/legal`);
        }}
      />
      <Action
        title="Me déconnecter"
        onPress={() => {
          void signOut();
        }}
      />
      {!closing ? (
        <Action
...
