appId: com.raero.academy.qa
---
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: "Ouvrir"
          optional: true
- extendedWaitUntil:
    visible: "Nouveau mot de passe"
    timeout: 15000
- tapOn:
    id: "field-Nouveau mot de passe"
- inputText: ${NEW_PASSWORD}
- hideKeyboard
- tapOn: "Modifier mon mot de passe"
- extendedWaitUntil:
    visible: "Votre mot de passe a été modifié.*"
    timeout: 15000
- takeScreenshot: recovery-completed
- tapOn: "Me connecter"
- extendedWaitUntil:
    visible: "Vos formations, à portée de main."
    timeout: 15000
