appId: com.raero.academy.qa
---
- tapOn: "Mon compte(, tab, [1-3] of 3)?"
- scrollUntilVisible:
    element: "Me déconnecter"
    direction: DOWN
    centerElement: true
- tapOn: "Me déconnecter"
- extendedWaitUntil:
    visible: "Mot de passe oublié"
    timeout: 15000
- tapOn: "Mot de passe oublié"
- assertVisible: "Retrouvez votre accès."
- tapOn:
    id: "field-Adresse e-mail"
- inputText: ${EMAIL}
- hideKeyboard
- tapOn: "Recevoir les instructions"
- extendedWaitUntil:
    visible: "Si un compte correspond.*"
    timeout: 15000
- takeScreenshot: recovery-requested
