appId: com.raero.academy.qa
---
- scrollUntilVisible:
    element: "Vérifier la documentation"
    direction: DOWN
    centerElement: true
- tapOn: "Vérifier la documentation"
- scrollUntilVisible:
    element: "Vérifier ma réponse"
    direction: DOWN
    centerElement: true
- tapOn: "Vérifier ma réponse"
- scrollUntilVisible:
    element: "Poursuivre la vidéo"
    direction: DOWN
    centerElement: true
- tapOn: "Poursuivre la vidéo"
- extendedWaitUntil:
    visible: "Poursuivre la démonstration"
    timeout: 15000
- tapOn: "Poursuivre la démonstration"
- extendedWaitUntil:
    visible: "1 · Zone de contrôle"
    timeout: 15000
- tapOn: "1 · Zone de contrôle"
- extendedWaitUntil:
    visible: "Vérification"
    timeout: 15000
- tapOn: "Vérification"
- scrollUntilVisible:
    element: "Avant intervention : Choisir"
    direction: DOWN
    centerElement: true
- tapOn: "Avant intervention : Choisir"
- tapOn: "Vérifier ma réponse"
- assertVisible: "Bonne réponse."
- takeScreenshot: video-activities-complete
- scrollUntilVisible:
    element: "Poursuivre la vidéo"
    direction: DOWN
    centerElement: true
- tapOn: "Poursuivre la vidéo"
- scrollUntilVisible:
    element: "Diapositive suivante"
    direction: DOWN
    centerElement: true
- tapOn: "Diapositive suivante"
- scrollUntilVisible:
    element: "Vrai"
    direction: UP
    centerElement: true
- tapOn: "Vrai"
- tapOn: "Vérifier ma réponse"
- scrollUntilVisible:
    element: "Terminer ces diapositives"
    direction: DOWN
    centerElement: true
- tapOn: "Terminer ces diapositives"
- scrollUntilVisible:
    element: "Vous avez atteint la fin de ces diapositives.*"
    direction: DOWN
    centerElement: true
- assertVisible: "Vous avez atteint la fin de ces diapositives.*"
- takeScreenshot: slides-completed
